# deciphon-sched

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  dcp_sched-config.cmake.in  install-deps  install-sqlite3  install-xxhash  sched-config.cmake.in
.github/workflows/: deploy.yml  test.yml
include/sched/: db.h  error.h  hmm.h  hmmer.h  hmmer_filename.h  job.h  limits.h  logger.h  prod.h  prodset.h  rc.h  scan.h  sched.h  seq.h  structs.h
src/: array.c  array.h  bug.h  compiler.h  db.c  db.h  error.c  error.h  fs.c  fs.h  hmm.c  hmm.h  hmmer.c  hmmer.h  hmmer_filename.c  job.c  job.h  logger.c  logger.h  ltoa.c  ltoa.h  prod.c  prod.h  prodset.c  safe.c  safe.h  scan.c  scan.h  sched.c  sched.h  sched_health.c  sched_health.h  sched_limits.h  schema.h  schema.sql  seq.c  seq.h  seq_queue.c  seq_queue.h  sqldiff.c  (+21 more)
src/dcp_sched/: job.h  limits.h  prod.h  rc.h  sched.h  seq.h  version.h.in
test/: CMakeLists.txt  fs.c  fs.h  hope.h  hope_support.h  prod.tsv  sched.c
tools/: embed-file
